examples/tut-pipe-wrong-1.expect
---CODE---
1
---STDERR---
error: delay must be longer than the length of the signal
  ┌─ examples/tut-pipe-wrong-1.fil:8:5
  │
5 │ comp main<G: 1>(
  │           - interface allows event to trigger every 1 cycle(s)
  ·
8 │     @[G, G+3] op: 1,
  │     ^^^^^^^^^ signal lasts for 3 cycle(s)

error: event provided to invocation triggers more often that invocation's event's delay allows
   ┌─ examples/tut-pipe-wrong-1.fil:15:13
   │
 5 │ comp main<G: 1>(
   │              - this event triggers every 1 cycles
   ·
15 │     m0 := M<G>(left, right);
   │             ^ event provided to invoke triggers too often
   │
   ┌─ examples/./sequential.fil:3:18
   │
 3 │ comp Mult[#W]<G: 2>(
   │                  - invocation's event is allowed to trigger every 2 cycles

error: event provided to invocation triggers more often that invocation's event's delay allows
   ┌─ examples/tut-pipe-wrong-1.fil:18:28
   │
 5 │ comp main<G: 1>(
   │              - this event triggers every 1 cycles
   ·
18 │     r0 := new Register[32]<G, G+3>(a0.out);
   │                            ^ event provided to invoke triggers too often
   │
   ┌─ ./primitives/./state.fil:4:28
   │
 4 │   comp Register[#WIDTH]<G: L-(G+1), L: 1>(
   │                            ------- invocation's event is allowed to trigger every 2 cycles

Compilation failed with 3 errors.
Run with --show-models to generate assignments for failing constraints.
